Fix error on mobile styling

--- a/client/Components/Nav/Nav.css
+++ b/client/Components/Nav/Nav.css
@@ -11,7 +11,7 @@
 
 .dropdown {
   float: left;
-  width: 5%;
+  width: 50px;
 }
 
 .link, .dropbtn {
